# pyrepositoryminer

./: .gitignore  .pre-commit-config.yaml  DOCS.md  Dockerfile  Pipfile  README.md  measure.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml  publish.yaml  test.yaml
pydrillertest/: main.py
pyrepositoryminer/: __init__.py  __main__.py  analyze.py  helper.py  main.py  output.py  pobjects.py  treevisitor.py  visitableobject.py
pyrepositoryminer/commands/: __init__.py  analyze.py  branch.py  clone.py  commits.py
pyrepositoryminer/commands/utils/: commits.py  metric.py
pyrepositoryminer/metrics/: __init__.py  main.py  structs.py  utils.py  visitor.py
pyrepositoryminer/metrics/blob/: __init__.py  halstead.py  linecount.py  maintainability.py  nesting.py  raw.py
pyrepositoryminer/metrics/diffblob/: __init__.py  diffpylinecount.py  main.py
pyrepositoryminer/metrics/diffdir/: __init__.py  difftokei.py  main.py  seerene.py
pyrepositoryminer/metrics/dir/: __init__.py  main.py  tokei.py
pyrepositoryminer/metrics/nativeblob/: __init__.py  complexity.py  halstead.py  linecount.py  linelength.py  main.py  maintainability.py  nesting.py  pylinecount.py  raw.py
pyrepositoryminer/metrics/nativetree/: __init__.py  (+5 more)
scripts/: demo-khrbinding-generator.sh  demo-webgl-operate.sh  demo.sh  docker-demo.sh  jsonl_to_csv.py  measure.sh  measure_native_vs_subprocess.sh  measure_pylinecount.sh  mount-ramdisk-macos.sh  profile_analyze.py  profile_analyze_worker.py  profile_subprocess.py  unmount-ramdisk-macos.sh
tests/: test_pyrepositoryminer.py  test_runs.py
(+7 files in other folders)
